--- a/walfare.html
+++ b/walfare.html
@@ -2,51 +2,162 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="working.css">
-		<title>(仮)BITリクルートサイト</title>
+		<link rel="stylesheet" href="style.css">
+		<title>福利厚生</title>
 	</head>
 	<body>
-		<header>
-			<nav id="menu-box">
-			<div id="toggle"><img src="images/rogo.png" class="toggleRogo"><a href="#" class="toggleMenu">RECRUIT MENU</a></div>
-				<ul class="menu">
-					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
-					<li class="menuHome"><a href="index.html">ホーム</a></li>
-					<li class="menuList"><a href="#">会社概要<span class="menuLinkUnder">Company</span></a></li>
-					<li class="menuList"><a href="#">仕事内容<span class="menuLinkUnder">Work</span></a></li>
-					<li class="menuList"><a href="#">経営理念<span class="menuLinkUnder">Vision</span></a></li>
-					<li class="menuList"><a href="#">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
-					<li class="menuList"><a href="#">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
-					<li class="menuList"><a href="#">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
-				</ul>
-			</nav>
-		<div class="clear"></div>
-		</header>
+	<?php include("../inc/header.inc"); ?>
 	
-	<!-- 本文部分 -->
-	福利厚生
-	</body>
-		<footer>
-			<hr>
-			<div class="LinkImageBox">
-				<div class="ricNaviImageBox">
-					<a href=""><img src="images/rn_logo_b.gif" class="ricNaviImage"></a>
-					<a href=""><img src="images/qr20180316101758793.png" class="LinkricNaviImageRespons"></a>
-				</div>
-				<a href=""><img src="images/facebook_link.gif" class="LinkFBImage"></a>
+	<div class="image">
+		<img src="./images/title05.png" alt="福利厚生">
+	</div>
+	
+	<div class="mcl-box04">
+	<h2>各種制度</h2>
+			<p>ビーアイテイでは、社員が生き生きと仕事に取り組めるよう、福利厚生に関わる制度・施設の充実にも力を入れています。</p>
+			
+	    <div class="mcl-box04-text">
+	    <h3 id="vacation">各種社会保険</h3>
+			<p>各種社会保険完備（健康・厚生年金・雇用・労災・介護）</p>
+		<!-- 厚生年金基金（全額会社負担）<br /><br /> -->
+		
+		<h3 id="vacation">休暇制度</h3>
+			<p>完全週休2日制（土日）、祝祭日、夏期・年末年始休暇（年間休日125日）</p>
+		<h4>年次有給休暇</h4>
+	
+			<p>勤続年数に応じて年次有給休暇が付与されます。（初年度12日、2年目以降20日）<br />
+				年次有給休暇は、半日および時間単位での取得が可能です。</p>
+		<h4>積立保存休暇</h4>
+	
+			<p>使いきれなかった年次有給休暇は、「積立保存休暇」として積み立てる事ができます。</p>
+		<h4>リフレッシュ休暇</h4>
+	
+			<p>10年、20年、30年の勤続年数によって連続の特別有給休暇が付与されます。</p>
+		<h4>その他の特別休暇</h4>
+	
+<p>年次有給休暇とは別に、以下の特別休暇を取得することができます。<br />
+慶弔休暇、産前産後休暇、転勤赴任休暇、子の看護休暇、介護休暇、妊産婦の通院休暇、裁判員休暇など</p>
+		メンタルヘルス支援
+	  　<p class="t-ind01">メンタルヘルス医師と提携しており、通常より安価にてカウンセリングを受けることが出来ます。</p>
+		親睦会制度<br />
+		<p class="t-ind01">新人歓迎会、忘年会や社員旅行（年1回、5年に一度海外）を行っております。</p>
+		また、クラブ活動等、各種交流イベントを行い、社内の環境作りに力を入れております。
+		</div>
+	  </div>
+	  <div class="mcl-box05">
+	    <div class="mcl-box05-img">
+		<img src="./img/sys-img01.jpg" alt="親睦会写真"><br /><br />
+		<img src="./img/sys-img02.jpg" alt="ゴルフ部部活写真"><br /><br />
+		</div>
+	  </div>
+	  <div class="clear"></div>
+
+	  <div class="mcl-img02" style="padding:5px 0;"><img src="./img/re_sys-fukuri-h01.gif" alt="全国情報サービス産業企業年金基金(JJK)"></div>
+	  <div class="mcl-box03">
+	  BITでは<a href="http://www.jjk.or.jp/" target="_blank">全国情報サービス産業企業年金基金(JJK)</a>に加入しており、以下の福利厚生サービスを利用することができます。<br /><br />
+	  提携保養所<br />
+	  <p class="t-ind01">
+	  国内３ヵ所の借上保養所はJTB東京赤坂支店を窓口として、ハワイ保養施設「イリカイ」はインケア（株）を窓口として借上契約を結んでいます。いずれも快適な施設です。
+	  </p>
+	  借上保養所<br />
+	  <p class="t-ind01">
+	  JTB東京赤坂支店を窓口として、５ヵ所の旅館（ホテル）と契約しています。<br />
+	  利用料金については通常価格より、約１０％オフでの利用が可能です。<br />
+	  さらにＪＪＫより１人１泊につき６,０００円の補助が受けられます。<br />
+	  </p>
+	  契約保養施設<br />
+	  <p class="t-ind01">
+	  加入員、年金受給者の健康保持増進を目的として、旅行代理店や全国各地の宿泊施設と保養所利用契約を結び、利用に際して費用の一部を補助しています。
+	  </p>
+	  結婚祝品<br />
+	  <p class="t-ind01">
+	  加入員期間１年以上の加入員が結婚した際、１０点の『お祝い品』から１点をお選びいただき、その品を贈呈します。
+	  </p>
+	  契約結婚式場<br />
+	  <p class="t-ind01">結婚式場と割引契約を結んでおり、対象となる結婚式場の結婚式費用等が割引されます。</p>
+	  住宅資金融資<br />
+	  <p class="t-ind01">
+	  三菱UFJ信託銀行と提携して、加入員が居住する住宅の新・増改築および住宅用地の購入に必要な資金の融資をご紹介しております。
+	  </p>
+	  長寿祝品<br />
+	  <p class="t-ind01">年金受給者のご長寿をお祝いして、お祝いの品をお贈りいたします。</p>
+	  弔慰金・遺児育英補助金<br />
+	  <p class="t-ind01">
+	  加入員および年金受給者が亡くなられたとき、その遺族または埋葬を行った人に『弔慰金』を支給いたします。また、加入員が亡くなられたとき、加入員により生計を維持された遺児を対象に『遺児育英補助金』を支給します。
+	  </p>
+	  </div>
+
+		<div class="mcl-img02"><img src="./img/re_sys-fukuri-h02.gif" alt="ベネフィットステーション"></div>
+		<div class="mcl-box-bs01">
+			BITでは全国情報サービス産業企業年金基金(JJK)以外にも<a href="https://bs.benefit-one.co.jp/bs/pages/bs/top/top.faces" target="_blank">ベネフィット・ステーション</a>に会員登録しており、様々な福利厚生サービスを利用することができます。
+		</div>
+		<div class="bs-box01">
+			<div class="bs-box01-left">
+				<p class="bs-header01"><span class="bs-list">●</span>育児</p>
+				<img src="./img/re_sys-fukuri02-01.jpg" alt="育児イメージ">
+				<p class="bs-header02">出産から子育てまで何でもおまかせ！</p>
+				<p>子育て中のママ・パパの為の、各種育児サポート制度や託児所・ベビーシッター探しのお手伝いなど、働くあなたを全力で応援します。</p>
 			</div>
-			<div class="footerMenuBox">
-				<ul class="footerMenu">
-					<li class="footerMenu"><a href="" class="footerMenuLink">会社概要<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">仕事内容<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">経営理念<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">社員紹介<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">福利厚生<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">募集要項<a/></li>
-				</ul>
+			<div class="bs-box01-right">
+				<p class="bs-header01"><span class="bs-list">●</span>介護</p>
+				<img src="./img/re_sys-fukuri02-02.jpg" alt="介護イメージ">
+				<p class="bs-header02">介護に関するお役立ち情報満載！</p>
+				<p>介護に関するご相談から、施設探し、在宅介護サービスまでサポートいたします。在宅介護やサービスまでサポートいたします。在宅介護や介護用品の補助金もあります。</p>
 			</div>
 			<div class="clear"></div>
-			<p class="copyright">Copyright ©2018 BIT Ltd. All Rights Reserved.</p>
-		</footer>
+		</div>
+
+		<div class="bs-box01">
+			<div class="bs-box01-left">
+				<p class="bs-header01"><span class="bs-list">●</span>健康</p>
+				<img src="./img/re_sys-fukuri02-03.jpg" alt="健康イメージ">
+				<p class="bs-header02">ココロとカラダのサポート！</p>
+				<p>元気で健やかな暮らしをトータルサポート。人間ドックや脳検診など、各種健診サービスを利用して健康チェックの心がけを。</p>
+			</div>
+			<div class="bs-box01-right">
+				<p class="bs-header01"><span class="bs-list">●</span>スポーツ</p>
+				<img src="./img/re_sys-fukuri02-04.jpg" alt="スポーツイメージ">
+				<p class="bs-header02">豊かな生活を送るために！</p>
+				<p>スポーツライフを応援する特典情報が満載。フィットネスクラブをはじめヨガやスポーツイベントも実施しております。</p>
+			</div>
+			<div class="clear"></div>
+		</div>
+
+		<div class="bs-box01">
+			<div class="bs-box01-left">
+				<p class="bs-header01"><span class="bs-list">●</span>学ぶ</p>
+				<img src="./img/re_sys-fukuri02-05.jpg" alt="学ぶイメージ">
+				<p class="bs-header02">皆様の『学びたい』を全面サポート！</p>
+				<p>語学や資格、ビジネススキルやおけいこごとまで、約300の講座が無料のフリーeラーニングなど学習サポート制度も充実しています。</p>
+			</div>
+			<div class="bs-box01-right">
+				<p class="bs-header01"><span class="bs-list">●</span>ショッピング</p>
+				<img src="./img/re_sys-fukuri02-06.jpg" alt="ショッピングイメージ">
+				<p class="bs-header02">人気商品をどこよりも安くご提供！</p>
+				<p>フォーマルシーンで活躍するスーツや、お気に入りのインテリアなどお店でもネット通販でもお得にショッピング。</p>
+			</div>
+			<div class="clear"></div>
+		</div>
+
+		<div class="bs-box01">
+			<div class="bs-box01-left">
+				<p class="bs-header01"><span class="bs-list">●</span>グルメ</p>
+				<img src="./img/re_sys-fukuri02-07.jpg" alt="グルメイメージ">
+				<p class="bs-header02">色々な飲食店がお得に利用できる！</p>
+				<p>有名ホテルのレストランや話題のお店から普段使いのお店まで。お得に使える特典が充実しています。</p>
+			</div>
+			<div class="bs-box01-right">
+				<p class="bs-header01"><span class="bs-list">●</span>旅行</p>
+				<img src="./img/re_sys-fukuri02-08.jpg" alt="旅行イメージ">
+				<p class="bs-header02">リゾートを満喫！出張をスマートに！</p>
+				<p>国内&海外のホテルやパッケージツアーなど、会員限定のお得なプランや旅行情報を発言。多数の予約サイトと提携しているため、旅の目的に合った宿の選択肢が広がります。</p>
+			</div>
+			<div class="clear"></div>
+		</div>
+
+		<div class="mcl-box-bs02">
+			<p>その他にも多数のサービスがご利用出来ます。詳しくは、<a href="https://bs.benefit-one.co.jp/bs/pages/bs/top/top.faces" target="_blank">ベネフィット・ステーション</a>よりご覧ください。</p>
+		</div>
+		<?php include("../inc/footer.inc"); ?>
 	</body>
 </html>
