--- a/working.html
+++ b/working.html
@@ -21,7 +21,7 @@
 	<br>
 	<br>
 	<div class="image2">
-		<img src="images/sample.jpg" alt="サンプル" class="image2">
+		<img src="images/sub1.png" alt="サンプル" class="image2">
 	<br>
 	<br>
 	<div class="text">
@@ -40,16 +40,7 @@
 	<br>
 	<br>
 	<div class="image4">
-		<img src="images/sample.jpg" alt="サンプル" class="image4">
-	</div>
-	<div class="image5">
-		<img src="images/sample.jpg" alt="サンプル" class="image5">
-	</div>
-	<div class="image6">
-		<img src="images/sample.jpg" alt="サンプル" class="image6">
-	</div>
-	<div class="image7">
-		<img src="images/sample.jpg" alt="サンプル" class="image7">
+		<img src="images/sub2.png" alt="サンプル" class="image4">
 	</div>
 	<br>
 	<br>
@@ -62,14 +53,8 @@
 	</div>
 	<br>
 	<br>
-	<div class="image8">
-		<img src="images/sample.jpg" alt="サンプル" class="image8">
-	</div>
-	<div class="image9">
-		<img src="images/sample.jpg" alt="サンプル" class="image9">
-	</div>
-	<div class="image10">
-		<img src="images/sample.jpg" alt="サンプル" class="image10">
+	<div class="image5">
+		<img src="images/sub3.png" alt="サンプル" class="image5">
 	</div>
 	<br>
 	<br>
