--- a/recruitMiddlePageOsaka1.html
+++ b/recruitMiddlePageOsaka1.html
@@ -13,12 +13,19 @@
 	<body>
 		<?php include("../inc/header.inc"); ?>
 		
-<div class="">
-	<!-- 画像 -->
-	<div class="image">
-		<img src="./images/title06.png" alt="募集要項">
-	</div>
-	<div class="clear"></div>
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">HOME</a>
+			> 
+			<a href="recruit.html" class="">募集要項</a>
+			> 中途採用 大阪 プログラマー
+		</div>
+		
+		<!-- 画像 -->
+		<div class="image">
+			<img src="./images/title06.png" alt="募集要項">
+		</div>
+		<div class="clear"></div>
 		<h2>中途採用 大阪</h2>
 		<dl class="recruitBox">
 			<dt class="recruitList">募集職種</dt>
