--- a/recruitMiddlePageTokyo1.html
+++ b/recruitMiddlePageTokyo1.html
@@ -12,8 +12,13 @@
 	</head>
 	<body>
 		<?php include("../inc/header.inc"); ?>
-		
-<div class="">
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">HOME</a>
+			> 
+			<a href="recruit.html" class="">募集要項</a>
+			> 中途採用 東京 プログラマー
+		</div>
 	<!-- 画像 -->
 	<div class="image">
 		<img src="./images/title06.png" alt="社員紹介">
