--- a/recruitMiddlePageTokyo2.html
+++ b/recruitMiddlePageTokyo2.html
@@ -14,12 +14,18 @@
 
 		<?php include("../inc/header.inc"); ?>
 		
-<div class="">
-	<!-- 画像 -->
-	<div class="image">
-		<img src="./images/title06.png" alt="社員紹介">
-	</div>
-	<div class="clear"></div>
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">HOME</a>
+			> 
+			<a href="recruit.html" class="">募集要項</a>
+			> 中途採用 東京 システムエンジニア
+		</div>
+		<!-- 画像 -->
+		<div class="image">
+			<img src="./images/title06.png" alt="社員紹介">
+		</div>
+		<div class="clear"></div>
 		<h2>中途採用 東京</h2>
 		<dl class="recruitBox">
 			<dt class="recruitList">募集職種</dt>
