--- a/recruitNewGraduatePageTokyo1.html
+++ b/recruitNewGraduatePageTokyo1.html
@@ -11,18 +11,26 @@
 		<link href="css/jquery.bxslider.css" rel="stylesheet" />
 	</head>
 	<body>
+
 		<?php include("../inc/header.inc"); ?>
 		
-<div class="">
-	<!-- 画像 -->
-	<div class="image">
-		<img src="./images/title06.png" alt="募集要項">
-	</div>
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">HOME</a>
+			> 
+			<a href="recruit.html" class="">募集要項</a>
+			> 新卒採用 東京 プログラマー
+		</div>
+		<!-- 画像 -->
+		<div class="image">
+			<img src="./images/title06.png" alt="募集要項">
+		</div>
+		<div class="clear"></div>
 		<h2>新卒採用 東京</h2>
 		<dl class="recruitBox">
 			<dt class="recruitList">募集職種</dt>
 				<dd class="recruitListdd">
-					システムエンジニア
+					プログラマー
 				</dd>
 			<dt class="recruitList">求める人材</dt>
 				<dd class="recruitListdd">
@@ -80,6 +88,6 @@
 			<div class="clear"></div>
 		</dl>
 		<div class="clear"></div>
-		<?php include("../inc/footer.inc"); ?>
+	<?php include("../inc/footer.inc"); ?>
 	</body>
 </html>
