--- a/walfare.html
+++ b/walfare.html
@@ -6,14 +6,24 @@
 		<title>福利厚生</title>
 	</head>
 	<body>
-	<?php include("../inc/header.inc"); ?>
-	
-	<div class="image">
-		<img src="./images/title05.png" alt="福利厚生">
-	</div>
-	
-	<h2>各種制度</h2>
-			<p class="">ビーアイテイでは、社員が生き生きと仕事に取り組めるよう、福利厚生に関わる制度・施設の充実にも力を入れています。</p>
+		<?php include("../inc/header.inc"); ?>
+		
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">
+				HOME
+			</a>
+			> 福利厚生
+		</div>
+		<div class="image">
+			<img src="./images/title05.png" alt="福利厚生">
+		</div>
+		
+		<h2>各種制度</h2>
+		<p class="walfareText">
+			ビーアイテイでは、社員が生き生きと仕事に取り組めるよう、
+			福利厚生に関わる制度・施設の充実にも力を入れています。
+		</p>
 
 		<dl class="recruitBox">
 			<dt class="recruitList">各種社会保険</dt>
@@ -50,20 +60,16 @@
 					メンタルヘルス医師と提携しており、通常より安価にてカウンセリングを受けることが出来ます。<br><br>
 					新人歓迎会、忘年会や社員旅行（年1回、5年に一度海外）を行っております。<br>
 					また、クラブ活動等、各種交流イベントを行い、社内の環境作りに力を入れております。<br>
-					
-					<div class="mcl-box05">
-						<div class="mcl-box05-img">
-						<img src="./img/sys-img01.jpg" alt="親睦会写真"><br /><br />
-						<img src="./img/sys-img02.jpg" alt="ゴルフ部部活写真"><br /><br />
-						</div>
-					</div>
 				</dd>
 			</dt>
 		</dl>
 	  <div class="clear"></div>
 
-	  <div style="padding:5px 0;"><img src="./images/re_sys-fukuri-h01.gif" alt="全国情報サービス産業企業年金基金(JJK)"></div>
-	  <p class="">BITでは<a href="http://www.jjk.or.jp/" target="_blank">全国情報サービス産業企業年金基金(JJK)</a>に加入しており、以下の福利厚生サービスを利用することができます。</p>
+	  <h2>全国情報サービス産業企業年金基金(JJK)</h2>
+	  <p class="walfareText">
+	  	BITでは<a href="http://www.jjk.or.jp/" target="_blank">全国情報サービス産業企業年金基金(JJK)</a>
+	  	に加入しており、以下の福利厚生サービスを利用することができます。
+	  </p>
 	  		
 	  	<dl class="recruitBox">
 			<dt class="recruitList">提携保養所</dt>
@@ -110,9 +116,13 @@
 			</dt>
 		</dl>
 
-		<div class="mcl-img02"><img src="./images/re_sys-fukuri-h02.gif" alt="ベネフィットステーション"></div>
-		<p class="">
-			BITでは全国情報サービス産業企業年金基金(JJK)以外にも<a href="https://bs.benefit-one.co.jp/bs/pages/bs/top/top.faces" target="_blank">ベネフィット・ステーション</a>に会員登録しており、様々な福利厚生サービスを利用することができます。
+		<h2>ベネフィットステーション</h2>
+		<p class="walfareText">
+			BITでは全国情報サービス産業企業年金基金(JJK)以外にも
+			<a href="https://bs.benefit-one.co.jp/bs/pages/bs/top/top.faces" target="_blank">
+				ベネフィット・ステーション
+			</a>
+			に会員登録しており、様々な福利厚生サービスを利用することができます。
 		</p>
 		<dl class="recruitBox">
 			<dt class="recruitList">育児</dt>
@@ -174,7 +184,7 @@
 			</dt>
 		</dl>
 		<div>
-			<p class="">その他にも多数のサービスがご利用出来ます。詳しくは、<a href="https://bs.benefit-one.co.jp/bs/pages/bs/top/top.faces" target="_blank">ベネフィット・ステーション</a>よりご覧ください。</p>
+			<p class="walfareText">その他にも多数のサービスがご利用出来ます。詳しくは、<a href="https://bs.benefit-one.co.jp/bs/pages/bs/top/top.faces" target="_blank">ベネフィット・ステーション</a>よりご覧ください。</p>
 		</div>
 		<?php include("../inc/footer.inc"); ?>
 	</body>
