--- a/recruitNewGraduatePageOsaka1.html
+++ b/recruitNewGraduatePageOsaka1.html
@@ -14,11 +14,17 @@
 
 		<?php include("../inc/header.inc"); ?>
 		
-<div class="">
-	<!-- 画像 -->
-	<div class="image">
-		<img src="./images/title06.png" alt="募集要項">
-	</div>
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">HOME</a>
+			> 
+			<a href="recruit.html" class="">募集要項</a>
+			> 新卒採用 大阪 プログラマー
+		</div>
+		<!-- 画像 -->
+		<div class="image">
+			<img src="./images/title06.png" alt="募集要項">
+		</div>
 		<h2>新卒採用 大阪</h2>
 		<dl class="recruitBox">
 			<dt class="recruitList">募集職種</dt>
