--- a/recruitNewGraduatePageOsaka2.html
+++ b/recruitNewGraduatePageOsaka2.html
@@ -13,7 +13,13 @@
 	<body>
 		<?php include("../inc/header.inc"); ?>
 		
-<div class="">
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">HOME</a>
+			> 
+			<a href="recruit.html" class="">募集要項</a>
+			> 新卒採用 大阪 システムエンジニア
+		</div>
 	<!-- 画像 -->
 	<div class="image">
 		<img src="./images/title06.png" alt="募集要項">
