--- a/recruitNewGraduatePageTokyo2.html
+++ b/recruitNewGraduatePageTokyo2.html
@@ -11,20 +11,24 @@
 		<link href="css/jquery.bxslider.css" rel="stylesheet" />
 	</head>
 	<body>
-
 		<?php include("../inc/header.inc"); ?>
 		
-<div class="">
+		<!-- パンくずリスト -->
+		<div class="">
+			<a href="index.html" class="">HOME</a>
+			> 
+			<a href="recruit.html" class="">募集要項</a>
+			> 新卒採用 東京 システムエンジニア
+		</div>
 	<!-- 画像 -->
 	<div class="image">
 		<img src="./images/title06.png" alt="募集要項">
 	</div>
-	<div class="clear"></div>
 		<h2>新卒採用 東京</h2>
 		<dl class="recruitBox">
 			<dt class="recruitList">募集職種</dt>
 				<dd class="recruitListdd">
-					プログラマー
+					システムエンジニア
 				</dd>
 			<dt class="recruitList">求める人材</dt>
 				<dd class="recruitListdd">
@@ -82,6 +86,6 @@
 			<div class="clear"></div>
 		</dl>
 		<div class="clear"></div>
-	<?php include("../inc/footer.inc"); ?>
+		<?php include("../inc/footer.inc"); ?>
 	</body>
 </html>
