--- a/working.html
+++ b/working.html
@@ -8,7 +8,7 @@
 </head>
 <body class="overview">
 	<div class="title02">
-		<img src="images/title02.png" alt="仕事内容" class="title02">
+		<img src="images/title02.png" alt="タイトル" class="title02">
 	</div>
 	<br>
 	<div class="image1">
@@ -21,7 +21,7 @@
 	<br>
 	<br>
 	<div class="image2">
-		<img src="images/sub1.png" alt="サンプル" class="image2">
+		<img src="images/sub1.png" alt="仕事内容" class="image2">
 	<br>
 	<br>
 	<div class="text">
@@ -35,12 +35,12 @@
 	<br>
 	<br>
 	<div class="image3">
-		<img src="images/working2.png" alt="入社から研修を経て..." class="image3">
+		<img src="images/working2.png" alt="入社から研修を経て" class="image3">
 	</div>
 	<br>
 	<br>
 	<div class="image4">
-		<img src="images/sub2.png" alt="サンプル" class="image4">
+		<img src="images/sub2.png" alt="仕事内容" class="image4">
 	</div>
 	<br>
 	<br>
@@ -54,7 +54,7 @@
 	<br>
 	<br>
 	<div class="image5">
-		<img src="images/sub3.png" alt="サンプル" class="image5">
+		<img src="images/sub3.png" alt="仕事内容" class="image5">
 	</div>
 	<br>
 	<br>
