--- a/outline.html
+++ b/outline.html
@@ -57,8 +57,16 @@
 		</header>
 </head>
 <body class="overview">
-	<h1 align="center">会社概要</h1>
-	<hr>
+	<!-- パンくずリスト -->
+	<div class="">
+		<a href="index.html" class="">
+			HOME
+		</a>
+		> 会社概要
+	</div>
+	<div class="title">
+		<img src="images/title01.png">
+	</div>
 	<div class="outline_wrapper">
 		<span class="index">
 			会社名
