--- a/philosophy.html
+++ b/philosophy.html
@@ -8,7 +8,14 @@
 <title>経営理念</title>
 </head>
 <body>
-	<div class="topImg"><img src="images/title03.png"></div>
+	<!-- パンくずリスト -->
+	<div class="">
+		<a href="index.html" class="">
+			HOME
+		</a>
+		> 経営理念
+	</div>
+	<div class="title"><img src="images/title03.png"></div>
 	<div class="slogan_container">
 		<div class="topImg"><img src="images/philosophy_sub1.png"></div>
 		<div class="slogan_headderText">
@@ -51,10 +58,14 @@
 		<div class="wrapper_list">
 			<p class="list_headderWord">株式会社ビーアイテイが目指すことは</p>
 			<div class="list">
-				<p class="list_text">
-					１、全社員が一日を楽しく一年を愉快に過ごせる会社<br>
-					２、仕事を通じて、社会に貢献し存在感のある会社<br>
-					３、全社員が一生、夢と喜びが持て安心感のある会社<br>
+				<p class="list_text_1">
+					１、全社員が一日を楽しく一年を愉快に過ごせる会社
+				</p>
+				<p class="list_text_2">
+					２、仕事を通じて、社会に貢献し存在感のある会社
+				</p>
+				<p class="list_text_3">
+					３、全社員が一生、夢と喜びが持て安心感のある会社
 				</p>
 			</div>
 		</div>
