--- a/working.html
+++ b/working.html
@@ -12,7 +12,7 @@
 	</div>
 	<br>
 	<div class="image1">
-		<img src="images/working1.png" alt="携わるお客様全てに満足を" class="image1">
+		<img src="images/work_sub1.png" alt="携わるお客様全てに満足を" class="image1">
 	</div>
 	<br>
 	<div class="text">
@@ -35,7 +35,7 @@
 	<br>
 	<br>
 	<div class="image3">
-		<img src="images/working2.png" alt="入社から研修を経て" class="image3">
+		<img src="images/work_sub2.png" alt="入社から研修を経て" class="image3">
 	</div>
 	<br>
 	<br>
