--- a/philosophy.html
+++ b/philosophy.html
@@ -13,7 +13,7 @@
 		<a href="index.html" class="">
 			HOME
 		</a>
-		> 経営理念ああああああ
+		> 経営理念
 	</div>
 	<div class="title"><img src="images/title03.png"></div>
 	<div class="slogan_container">
