福利厚生ファイル名の修正

--- a/walfara.html
+++ b/walfara.html
@@ -16,7 +16,7 @@
 			> 福利厚生
 		</div>
 		<div class="image">
-			<img src="./images/title05.png" alt="福利厚生">
+			<img src="./images/title05.png" alt="福利厚生" class="titleImage">
 		</div>
 		
 		<h2>各種制度</h2>
