福利厚生の画像の追加 募集要項の画像の位置調整

--- a/recruit.html
+++ b/recruit.html
@@ -24,12 +24,12 @@
 		<div class="">
 			<!-- 画像 -->
 			<div class="image">
-				<img src="./images/title06.png" alt="募集要項">
+				<img src="./images/title06.png" alt="募集要項" class="titleImage">
 			</div>
 			<!-- //画像 -->
 			
 			<div class="imageMarginBox">
-				<img src="./images/recruit_sub1.png">
+				<img src="./images/recruit_sub1.png" class="titleImage">
 			</div>
 			<dl class="recruitBox">
 				<dt class="recruitList">大阪</dt>
@@ -47,7 +47,7 @@
 			</dl>
 			
 			<div class="imageMarginBox">
-				<img src="./images/recruit_sub2.png">
+				<img src="./images/recruit_sub2.png" class="titleImage">
 			</div>
 			<dl class="recruitBox">
 				<dt class="recruitList">大阪</dt>
