--- a/recruitMiddlePageOsaka2.html
+++ b/recruitMiddlePageOsaka2.html
@@ -22,7 +22,7 @@
 		</div>
 		<!-- 画像 -->
 		<div class="image">
-			<img src="./images/title06.png" alt="募集要項">
+			<img src="./images/title06.png" alt="募集要項" class="titleImage">
 		</div>
 		
 		<div class="clear"></div>
