--- a/recruitMiddlePageTokyo1.html
+++ b/recruitMiddlePageTokyo1.html
@@ -21,7 +21,7 @@
 		</div>
 	<!-- 画像 -->
 	<div class="image">
-		<img src="./images/title06.png" alt="社員紹介">
+		<img src="./images/title06.png" alt="社員紹介" class="titleImage">
 	</div>
 	<div class="clear"></div>
 		<h2>中途採用 東京</h2>
