--- a/walfara.html
+++ b/walfara.html
@@ -19,7 +19,10 @@
 			<img src="./images/title05.png" alt="福利厚生" class="titleImage">
 		</div>
 		
-		<h2>各種制度</h2>
+		<!-- 各種制度 -->
+		<div class="imageMarginBox">
+			<img src="./images/welfara_sub1.png" class="titleImage">
+		</div>
 		<p class="walfareText">
 			ビーアイテイでは、社員が生き生きと仕事に取り組めるよう、
 			福利厚生に関わる制度・施設の充実にも力を入れています。
@@ -66,11 +69,14 @@
 		</dl>
 	  <div class="clear"></div>
 
-	  <h2>全国情報サービス産業企業年金基金(JJK)</h2>
-	  <p class="walfareText">
-	  	BITでは<a href="http://www.jjk.or.jp/" target="_blank">全国情報サービス産業企業年金基金(JJK)</a>
-	  	に加入しており、以下の福利厚生サービスを利用することができます。
-	  </p>
+		<!-- 全国情報サービス産業企業年金基金(JJK) -->
+		<div class="imageMarginBox">
+			<img src="./images/welfara_sub2.png" class="titleImage">
+		</div>
+		<p class="walfareText">
+			BITでは<a href="http://www.jjk.or.jp/" target="_blank">全国情報サービス産業企業年金基金(JJK)</a>
+			に加入しており、以下の福利厚生サービスを利用することができます。
+		</p>
 	  		
 	  	<dl class="recruitBox">
 			<dt class="recruitList">提携保養所</dt>
@@ -117,7 +123,10 @@
 			</dt>
 		</dl>
 
-		<h2>ベネフィットステーション</h2>
+		<!-- ベネフィットステーション -->
+		<div class="imageMarginBox">
+			<img src="./images/welfara_sub3.png" class="titleImage">
+		</div>
 		<p class="walfareText">
 			BITでは全国情報サービス産業企業年金基金(JJK)以外にも
 			<a href="https://bs.benefit-one.co.jp/bs/pages/bs/top/top.faces" target="_blank">
