--- a/recruitMiddlePageOsaka1.html
+++ b/recruitMiddlePageOsaka1.html
@@ -23,7 +23,7 @@
 		
 		<!-- 画像 -->
 		<div class="image">
-			<img src="./images/title06.png" alt="募集要項">
+			<img src="./images/title06.png" alt="募集要項" class="titleImage">
 		</div>
 		<div class="clear"></div>
 		<h2>中途採用 大阪</h2>
