--- a/recruitNewGraduatePageOsaka1.html
+++ b/recruitNewGraduatePageOsaka1.html
@@ -23,7 +23,7 @@
 		</div>
 		<!-- 画像 -->
 		<div class="image">
-			<img src="./images/title06.png" alt="募集要項">
+			<img src="./images/title06.png" alt="募集要項" class="titleImage">
 		</div>
 		<h2>新卒採用 大阪</h2>
 		<dl class="recruitBox">
