--- a/recruitNewGraduatePageTokyo1.html
+++ b/recruitNewGraduatePageTokyo1.html
@@ -23,7 +23,7 @@
 		</div>
 		<!-- 画像 -->
 		<div class="image">
-			<img src="./images/title06.png" alt="募集要項">
+			<img src="./images/title06.png" alt="募集要項" class="titleImage">
 		</div>
 		<div class="clear"></div>
 		<h2>新卒採用 東京</h2>
