--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 				<ul class="menu">
 					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
 					<li class="menuHome"><a href="index.html">ホーム!</a></li>
-					<li class="menuList"><a href="#">会社概要<span class="menuLinkUnder">Company</span></a></li>
-					<li class="menuList"><a href="#">仕事内容<span class="menuLinkUnder">Work</span></a></li>
+					<li class="menuList"><a href="outline.php">会社概要<span class="menuLinkUnder">Company</span></a></li>
+					<li class="menuList"><a href="working.php">仕事内容<span class="menuLinkUnder">Work</span></a></li>
 					<li class="menuList"><a href="#">経営理念<span class="menuLinkUnder">Vision</span></a></li>
-					<li class="menuList"><a href="#">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
-					<li class="menuList"><a href="#">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
-					<li class="menuList"><a href="#">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
+					<li class="menuList"><a href="produce.php">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
+					<li class="menuList"><a href="walfara.php">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
+					<li class="menuList"><a href="recruit.php">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
 				</ul>
 			</nav>
 		<div class="clear"></div>
@@ -95,12 +95,12 @@
 			<div class="clear"><div>
 			<div class="footerMenuBox">
 				<ul class="footerMenu">
-					<li class="footerMenu"><a href="" class="footerMenuLink">会社概要<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">仕事内容<a/></li>
+					<li class="footerMenu"><a href="outline.php" class="footerMenuLink">会社概要<a/></li>
+					<li class="footerMenu"><a href="working.php" class="footerMenuLink">仕事内容<a/></li>
 					<li class="footerMenu"><a href="" class="footerMenuLink">経営理念<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">社員紹介<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">福利厚生<a/></li>
-					<li class="footerMenu"><a href="" class="footerMenuLink">募集要項<a/></li>
+					<li class="footerMenu"><a href="produce.php" class="footerMenuLink">社員紹介<a/></li>
+					<li class="footerMenu"><a href="walfara.php" class="footerMenuLink">福利厚生<a/></li>
+					<li class="footerMenu"><a href="recruit.php" class="footerMenuLink">募集要項<a/></li>
 					<li class="footerMenu"><a href="" class="footerMenuLink"><img src="./images/fb.png"><a/></li>
 					<li class="footerMenu"><a href="" class="footerMenuLink"><img src="./images/ab.png"><a/></li>
 				</ul>
