--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 			<nav id="menu-box">
 			<div id="toggle"><a href="#" class="toggleMenu"><img src="images/rogo.png" class="toggleRogo">RECRUIT MENU</a></div>
 				<ul class="menu">
-					<li class="menuRogo"><a href="index.html"><img src="images/rogo.png" class="rogo"></a></li>
-					<li class="menuHome"><a href="index.html">ホーム!</a></li>
-					<li class="menuList"><a href="outline.php">会社概要<span class="menuLinkUnder">Company</span></a></li>
-					<li class="menuList"><a href="working.php">仕事内容<span class="menuLinkUnder">Work</span></a></li>
-					<li class="menuList"><a href="phlosophy.php">経営理念<span class="menuLinkUnder">Vision</span></a></li>
-					<li class="menuList"><a href="produce.php">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
-					<li class="menuList"><a href="walfara.php">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
-					<li class="menuList"><a href="recruit.php">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
+					<li class="menuRogo"><a href="./"><img src="images/rogo.png" class="rogo"></a></li>
+					<li class="menuHome"><a href="./">ホーム</a></li>
+					<li class="menuList"><a href="./company.php">会社概要<span class="menuLinkUnder">Company</span></a></li>
+					<li class="menuList"><a href="./work.php">仕事内容<span class="menuLinkUnder">Work</span></a></li>
+					<li class="menuList"><a href="./vision.php">経営理念<span class="menuLinkUnder">Vision</span></a></li>
+					<li class="menuList"><a href="./produce.php">社員紹介<span class="menuLinkUnder">Produce</span></a></li>
+					<li class="menuList"><a href="./walfare.php">福利厚生<span class="menuLinkUnder">Welfare</span></a></li>
+					<li class="menuList"><a href="./recruit.php">募集要項<span class="menuLinkUnder">Recruit</span></a></li>
 				</ul>
 			</nav>
 		<div class="clear"></div>
@@ -73,14 +73,14 @@
 		</div>
 		
 		<div class="">
-			<a href=""><img src="images/contentsImageCompany.jpg" class="contents1"></a>
-			<a href=""><img src="images/contentsImageWork.jpg" class="contents1"></a>
+			<a href="./company.php"><img src="images/contentsImageCompany.jpg" class="contents1"></a>
+			<a href="./work.php"><img src="images/contentsImageWork.jpg" class="contents1"></a>
 		</div>
 		<div class="contentsBox2">
-			<a href=""><img src="images/contentsImageVision.jpg" class="contents2L"></a>
-			<a href=""><img src="images/contentsImageProduce.jpg" class="contents2R"></a>
-			<a href=""><img src="images/contentsImageWelfare.jpg" class="contents2L"></a>
-			<a href="recruit.html">
+			<a href="./vision.php"><img src="images/contentsImageVision.jpg" class="contents2L"></a>
+			<a href="./produce.php"><img src="images/contentsImageProduce.jpg" class="contents2R"></a>
+			<a href="./walfare.php"><img src="images/contentsImageWelfare.jpg" class="contents2L"></a>
+			<a href="./recruit.php">
 				<img src="images/contentsImageRecruit.jpg" class="contents2R">
 			</a>
 		</div>
@@ -95,12 +95,12 @@
 			<div class="clear"><div>
 			<div class="footerMenuBox">
 				<ul class="footerMenu">
-					<li class="footerMenu"><a href="outline.php" class="footerMenuLink">会社概要<a/></li>
-					<li class="footerMenu"><a href="working.php" class="footerMenuLink">仕事内容<a/></li>
-					<li class="footerMenu"><a href="phlosophy.php" class="footerMenuLink">経営理念<a/></li>
-					<li class="footerMenu"><a href="produce.php" class="footerMenuLink">社員紹介<a/></li>
-					<li class="footerMenu"><a href="walfara.php" class="footerMenuLink">福利厚生<a/></li>
-					<li class="footerMenu"><a href="recruit.php" class="footerMenuLink">募集要項<a/></li>
+					<li class="footerMenu"><a href="./company.php" class="footerMenuLink">会社概要<a/></li>
+					<li class="footerMenu"><a href="./work.php" class="footerMenuLink">仕事内容<a/></li>
+					<li class="footerMenu"><a href="./vision.php" class="footerMenuLink">経営理念<a/></li>
+					<li class="footerMenu"><a href="./produce.php" class="footerMenuLink">社員紹介<a/></li>
+					<li class="footerMenu"><a href="./walfare.php" class="footerMenuLink">福利厚生<a/></li>
+					<li class="footerMenu"><a href="./recruit.php" class="footerMenuLink">募集要項<a/></li>
 					<li class="footerMenu"><a href="https://ja-jp.facebook.com/bit.Japan/" class="footerMenuLink" target="_blank"><img src="./images/fb.png"><a/></li>
 					<li class="footerMenu"><a href="https://ameblo.jp/bit-noma/" class="footerMenuLink" target="_blank"><img src="./images/ab.png"><a/></li>
 				</ul>
